Model and results

--- a/Pytorch mnist.ipynb
+++ b/Pytorch mnist.ipynb
@@ -33,7 +33,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_set = datasets.MNIST('/data/train/', \n",
+    "train_set = datasets.MNIST('./data/train/', \n",
     "                           download  = True, \n",
     "                           train     = True, \n",
     "                           transform = transform)"
@@ -41,11 +41,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
-    "test_set = datasets.MNIST('/data/test/', \n",
+    "test_set = datasets.MNIST('./data/test/', \n",
     "                          download  = True, \n",
     "                          train     = False, \n",
     "                          transform = transform)"
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,6 +135,51 @@
     "        running_loss += loss.item()\n",
     "    else:\n",
     "        print(\"Epoch {} - Training loss: {}\".format(e, running_loss/len(train_loader)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number Of Images Tested : 157\n",
+      "\n",
+      "Model Accuracy : 0.9808917197452229\n"
+     ]
+    }
+   ],
+   "source": [
+    "correct_count, all_count = 0, 0\n",
+    "for images, labels in test_loader:\n",
+    "    for i in range(len(labels)):\n",
+    "        img = images[i].view(1, 784)\n",
+    "        with torch.no_grad():\n",
+    "            logps = model(img)\n",
+    "\n",
+    "    \n",
+    "    ps = torch.exp(logps)\n",
+    "    probab = list(ps.numpy()[0])\n",
+    "    pred_label = probab.index(max(probab))\n",
+    "    true_label = labels.numpy()[i]\n",
+    "    if(true_label == pred_label):\n",
+    "        correct_count += 1\n",
+    "    all_count += 1\n",
+    "\n",
+    "print(\"Number Of Images Tested :\", all_count)\n",
+    "print(\"\\nModel Accuracy :\", (correct_count/all_count))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "torch.save(model, './mnist_model.pt') "
    ]
   },
   {
