Results + last model

--- a/Pytorch mnist.ipynb
+++ b/Pytorch mnist.ipynb
@@ -1316,14 +1316,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 0 - Training loss: 0.4219799446406713\n"
+      "Epoch 0 - Training loss: 0.4219799446406713\n",
+      "Epoch 1 - Training loss: 0.08289434520134539\n",
+      "Epoch 2 - Training loss: 0.05862108637481483\n",
+      "Epoch 3 - Training loss: 0.046089242206517056\n",
+      "Epoch 4 - Training loss: 0.03800240151885984\n",
+      "Epoch 5 - Training loss: 0.03235981112588316\n",
+      "Epoch 6 - Training loss: 0.028607837879645038\n",
+      "Epoch 7 - Training loss: 0.02484251156465204\n",
+      "Epoch 8 - Training loss: 0.021964005490482996\n",
+      "Epoch 9 - Training loss: 0.019312029347014325\n",
+      "Epoch 10 - Training loss: 0.016767851805794976\n",
+      "Epoch 11 - Training loss: 0.015464184059104177\n",
+      "Epoch 12 - Training loss: 0.013169094427689307\n",
+      "Epoch 13 - Training loss: 0.011738310292013672\n",
+      "Epoch 14 - Training loss: 0.010845196685557171\n"
      ]
     }
    ],
@@ -1345,16 +1359,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number Of Images Tested : 157\n",
+      "Number Of Images Tested : 10000\n",
       "\n",
-      "Model Accuracy : 0.9808917197452229\n"
+      "Model Accuracy : 0.991\n"
      ]
     }
    ],
@@ -1362,7 +1376,7 @@
     "correct_count, all_count = 0, 0\n",
     "for images, labels in test_loader:\n",
     "    for i in range(len(labels)):\n",
-    "        img = images[i].view(1, 784)\n",
+    "        img = images[i].view(1, 1, 28, 28)\n",
     "        with torch.no_grad():\n",
     "            logps = model(img)\n",
     "\n",
@@ -1381,7 +1395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
