--- a/Pytorch mnist.ipynb
+++ b/Pytorch mnist.ipynb
@@ -1217,7 +1217,7 @@
    "outputs": [],
    "source": [
     "train_loader = torch.utils.data.DataLoader(train_set, batch_size=64, shuffle=True)\n",
-    "test_loader = torch.utils.data.DataLoader(test_set, batch_size=64, shuffle=True)"
+    "test_loader  = torch.utils.data.DataLoader(test_set, batch_size=64, shuffle=True)"
    ]
   },
   {
@@ -1229,10 +1229,10 @@
     "class Net(nn.Module):\n",
     "    def __init__(self):\n",
     "        super(Net, self).__init__()\n",
-    "        conv1 = nn.Conv2d(1, 8, 3)\n",
-    "        conv2 = nn.Conv2d(8, 16, 3)\n",
-    "        fc1 = nn.Linear(16*4*4, 64)\n",
-    "        fc2 = nn.Linear(64, 10)\n",
+    "        self.conv1 = nn.Conv2d(1, 8, 3)\n",
+    "        self.conv2 = nn.Conv2d(8, 16, 3)\n",
+    "        self.fc1 = nn.Linear(16*4*4, 64)\n",
+    "        self.fc2 = nn.Linear(64, 10)\n",
     "        \n",
     "    def forward(self, x):\n",
     "        x = F.relu(self.conv1(x))\n",
@@ -1240,31 +1240,6 @@
     "        x = F.relu(self.conv2(x))\n",
     "        x = F.max_pool2d(x, 2, 2)\n",
     "        x = x.view(-1, 4*4*16)\n",
-    "        x = F.relu(self.fc1(x))\n",
-    "        x = self.fc2(x)\n",
-    "        return F.log_softmax(x, dim=1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 38,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class Net(nn.Module):\n",
-    "    def __init__(self):\n",
-    "        super(Net, self).__init__()\n",
-    "        self.conv1 = nn.Conv2d(1, 20, 5, 1)\n",
-    "        self.conv2 = nn.Conv2d(20, 50, 5, 1)\n",
-    "        self.fc1 = nn.Linear(4*4*50, 500)\n",
-    "        self.fc2 = nn.Linear(500, 10)\n",
-    "\n",
-    "    def forward(self, x):\n",
-    "        x = F.relu(self.conv1(x))\n",
-    "        x = F.max_pool2d(x, 2, 2)\n",
-    "        x = F.relu(self.conv2(x))\n",
-    "        x = F.max_pool2d(x, 2, 2)\n",
-    "        x = x.view(-1, 4*4*50)\n",
     "        x = F.relu(self.fc1(x))\n",
     "        x = self.fc2(x)\n",
     "        return F.log_softmax(x, dim=1)"
