--- a/Pytorch mnist.ipynb
+++ b/Pytorch mnist.ipynb
@@ -1231,7 +1231,7 @@
     "        super(Net, self).__init__()\n",
     "        self.conv1 = nn.Conv2d(1, 8, 3)\n",
     "        self.conv2 = nn.Conv2d(8, 16, 3)\n",
-    "        self.fc1 = nn.Linear(16*4*4, 64)\n",
+    "        self.fc1 = nn.Linear(400, 64)\n",
     "        self.fc2 = nn.Linear(64, 10)\n",
     "        \n",
     "    def forward(self, x):\n",
@@ -1239,7 +1239,7 @@
     "        x = F.max_pool2d(x, 2, 2)\n",
     "        x = F.relu(self.conv2(x))\n",
     "        x = F.max_pool2d(x, 2, 2)\n",
-    "        x = x.view(-1, 4*4*16)\n",
+    "        x = x.view(-1, 400)\n",
     "        x = F.relu(self.fc1(x))\n",
     "        x = self.fc2(x)\n",
     "        return F.log_softmax(x, dim=1)"
